--- a/Lab06/styles.css
+++ b/Lab06/styles.css
@@ -1,5 +1,5 @@
 body, h1, h2 { font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;}
 h1, h2 {color: rgb(60, 255, 0); }
-.special{color:blueviolet}
+.special{color:rgb(43, 226, 43)}
 h1{font-size: 20em;}
 h2 {font-size: 16em;}
