--- a/Lab05/images/Lab08/styles.css
+++ b/Lab05/images/Lab08/styles.css
@@ -4,7 +4,7 @@ h1{font-size: 5em;}
 h2 {font-size: 5em;}
 a {color:#0a2753;}
 h2 {color: #e90000;}
-h2 {background-color:#0017e9;}
+h2,body {background-color:#0017e9;}
 
 .second {background-color: #0a2753;
 border : 1px solid #ff0000;
