--- a/folder1/styles.css
+++ b/folder1/styles.css
@@ -6,12 +6,12 @@ body {
 
 header {
     background-color: #333;
-    padding: 10px;
+    color: #fff;
+    padding: 20px;
 }
 
 nav ul {
     list-style-type: none;
-    margin: 0;
     padding: 0;
 }
 
@@ -25,31 +25,27 @@ nav ul li a {
     text-decoration: none;
 }
 
-.container {
-    max-width: 960px;
-    margin: 20px auto;
-    padding: 0 20px;
-}
-
-.flex-container {
+main {
     display: flex;
     flex-wrap: wrap;
     justify-content: space-around;
+    padding: 20px;
 }
 
-.flex-container img {
-    width: 200px;
-    height: 200px;
+.flexbox {
+    flex: 1;
+    background-color: #f0f0f0;
     margin: 10px;
+    padding: 20px;
 }
 
-@media screen and (max-width: 600px) {
-    .flex-container {
+@media screen and (max-width: 768px) {
+    main {
         flex-direction: column;
+        align-items: center;
     }
 
-    .flex-container img {
-        width: 100%;
-        height: auto;
+    .flexbox {
+        width: 90%;
     }
 }
