--- a/folder1/styles.css
+++ b/folder1/styles.css
@@ -5,36 +5,66 @@ body, html {
 }
 
 .container {
-    display: flex; /* Set the container to flex */
-    flex-wrap: wrap; /* Allow flex items to wrap onto multiple lines */
+    display: flex; 
+    flex-wrap: wrap; 
 }
 
 .flexbox {
-    background-color: #f0f0f0;
+    background-color: #efd3d37e;
+    padding: 10px;
+    margin: 30px;
+    flex: 1 0 30%; 
+    max-width: 30%; 
+    box-sizing: border-box;
+    
+}
+.flexbox2 {
+    background-color: #b8aaea;
     padding: 20px;
     margin: 10px;
-    flex: 1 0 30%; /* Set flex-grow, flex-shrink, and flex-basis for responsiveness */
-    max-width: 30%; /* Limit flex item width for small screens */
-    box-sizing: border-box; /* Include padding and border in the width calculation */
+    flex: 1 0 30%; 
+    max-width: 30%; 
+    box-sizing:content-box;
+    position: absolute; 
+    top: 565px; 
+    right: 300px;
+    
 }
+.flexbox3 {
+    background-color: #5438b8;
+    padding: 20px;
+    margin: 10px;
+    flex: 1 0 30%; 
+    max-width: 30%; 
+    box-sizing:content-box;
+    position: absolute; 
+    top: 200px; 
+    right: 20px;}
 body {
     font-family:Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
     margin: 0;
-    padding: 0;
+    padding: 10px;
     background-color: rgba(238, 239, 240, 0.714);
+    border-color: #000000;
 }
 
 header {
-    background-color: #e7e8e585;
+    background-color: #1e9aa16b;
     color: #000000;
     padding: 20px;
     justify-content: center;
+    border-color: #000000;
+    border: 1px solid #000000;
 }
-
+.divider {
+    border-top: 1px solid #ccc;
+    margin-top: 20px; 
+    margin-bottom: 20px; 
+  }
 nav,ul {
     list-style-type:lower-latin;
-    padding: 1;
-    background-color: #9068e4;
+    padding: 2;
+    background-color: #000000;
 
 }
 
@@ -60,4 +90,9 @@ nav ul li a {
     .flexbox {
         width: 90%;
     }
+}
+footer {background-color: #aaead782;
+    border-top: 1px solid #000000; 
+    padding: 20px 0;
+    text-align: center; 
 }
