--- a/Lab13/styles.css
+++ b/Lab13/styles.css
@@ -1,19 +1,19 @@
 body, h1, h2 { font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', 'Arial',} 
-.special {color:rgb(43, 226, 43);}
+.special {color:rgb(188, 234, 188);}
 h1{font-size: 2em;}
 h2 {font-size: 3em;}
-a {color:#0a2753;}
-h2 {color: #e90000;}
-h2 {background-color:#0017e9;}
+a {color:#a1c4f7;}
+h2 {color: hsl(0, 100%, 98%);}
+h2 {background-color:#cbcfed;}
 
 .second {background-color: #0a2753;
-border : 1px solid #ff0000;
+border : 1px solid #fcb9b9;
 padding: 30px;}
-nav {background-color: #00dae9;}
+nav {background-color: #a1bcbd;}
 
 nav a {color: #e97c00;}
 nav a:hover {background-color:  #005de9;}
-nav {background-color: #530a37;
+nav {background-color: #764965;
     border : 1px solid rgb(14, 4, 4);
     padding: 10px;}
     nav {margin-bottom: 30px}
