--- a/Lab13/styles.css
+++ b/Lab13/styles.css
@@ -11,9 +11,9 @@ border : 1px solid #fcb9b9;
 padding: 30px;}
 nav {background-color: #a1bcbd;}
 
-nav a {color: #e97c00;}
+nav a {color: #000000;}
 nav a:hover {background-color:  #005de9;}
-nav {background-color: #764965;
+nav {background-color: #dd5dac;
     border : 1px solid rgb(14, 4, 4);
     padding: 10px;}
     nav {margin-bottom: 30px}
