--- a/Lab13/styles.css
+++ b/Lab13/styles.css
@@ -12,7 +12,7 @@ padding: 30px;}
 nav {background-color: #a1bcbd;}
 
 nav a {color: #000000;}
-nav a:hover {background-color:  #005de9;}
+nav a:hover {background-color:  #96bdf6;}
 nav {background-color: #dd5dac;
     border : 1px solid rgb(14, 4, 4);
     padding: 10px;}
