--- a/folder1/styles.css
+++ b/folder1/styles.css
@@ -1,4 +1,5 @@
 body, html {
+    transition: opacity 1s ease; 
     margin: 0;
     padding: 0;
     height: 100%;
@@ -9,6 +10,10 @@ body, html {
     flex-wrap: wrap; 
 }
 
+.jersey-20-charted-regular, h2, h1, body {
+    font-family: "Jersey 20 Charted", sans-serif;
+    font-weight: 400;
+    font-style: normal;}
 .flexbox {
     background-color: #efd3d37e;
     padding: 10px;
@@ -26,13 +31,13 @@ body, html {
     max-width: 30%; 
     box-sizing:content-box;
     position: absolute; 
-    top: 565px; 
+    top: 530px; 
     right: 300px;
     
 }
 .flexbox3 {
-    background-color: #5438b8;
-    padding: 20px;
+    background-color: #77718b5f;
+    padding: 10px;
     margin: 10px;
     flex: 1 0 30%; 
     max-width: 30%; 
@@ -69,9 +74,10 @@ nav,ul {
 }
 
 nav,ul,li {
-    display: inline;
+    
     margin-right: 40px;
-}
+    display: inline;
+    margin: 5px 0;}
 
 nav ul li a {
     color: #fff;
@@ -83,16 +89,65 @@ nav ul li a {
 
 @media screen and (max-width: 768px) {
     main {
-        flex-direction:row;
+        flex-direction: row;
         align-items: center;
     }
 
     .flexbox {
         width: 90%;
     }
+    .flexbox2 {
+        display: none;
+    }
+    .image-flexbox{
+        display: none;
+    }
+    .bingus-flexbox{
+        display:none;
+    }
 }
-footer {background-color: #aaead782;
+
+footer {
+    background-color: #aaead782;
     border-top: 1px solid #000000; 
     padding: 20px 0;
     text-align: center; 
 }
+
+nav {
+    text-align: center;
+}
+
+nav ul li {
+    display: inline; 
+    margin: 5px 0; 
+}
+@media screen and (max-width: 768px) {
+    main {
+        flex-direction: row;
+        align-items: center;
+    }
+
+    .flexbox {
+        width: 90%;
+    }
+    nav {
+        text-align: center; 
+    }
+    nav li {
+        display: block; 
+        margin: 5px 0; 
+    }
+    .element {
+        background-color: rgb(193, 57, 57); 
+    }
+}
+
+footer {
+    background-color: #aaead782;
+    border-top: 1px solid #000000; 
+    padding: 20px 0;
+    text-align: center; 
+}
+
+
